[gd_scene load_steps=2 format=3 uid="uid://cbvnkcuqxg1kq"]

[ext_resource type="Script" path="res://scripts/autoload/NetworkManager.gd" id="1_83d1j"]

[node name="Node" type="Node"]
script = ExtResource("1_83d1j")

[node name="RegisterRequest" type="HTTPRequest" parent="."]

[node name="CheckInRequest" type="HTTPRequest" parent="."]

[node name="CloseRequest" type="HTTPRequest" parent="."]

[node name="CheckInTimer" type="Timer" parent="."]

[connection signal="request_completed" from="RegisterRequest" to="." method="_on_register_request_request_completed"]
[connection signal="request_completed" from="CheckInRequest" to="." method="_on_check_in_request_request_completed"]
[connection signal="timeout" from="CheckInTimer" to="." method="_on_check_in_timer_timeout"]
